get autocomplete working
